misc: update translation files
Note: these translations have to be done in transifex too :/

--- a/etmain/locale/mod/cs.po
+++ b/etmain/locale/mod/cs.po
@@ -1070,7 +1070,7 @@ msgid "Yes"
 msgstr "Ano"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Povoluje zobrazení vlajek států"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2127,7 +2127,7 @@ msgid "Always Run:"
 msgstr "Vždy běžet:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Přepne mezi chůzí a během"
 
 #: etmain/ui/options_customise_game.menu:42
