--- a/etmain/locale/mod/de.po
+++ b/etmain/locale/mod/de.po
@@ -1073,7 +1073,7 @@ msgid "Yes"
 msgstr "JA"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Aktiviere Länder Flaggen auf dem Server"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2130,7 +2130,7 @@ msgid "Always Run:"
 msgstr "Immer rennen:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr ""
 
 #: etmain/ui/options_customise_game.menu:42
