--- a/etmain/locale/mod/nl.po
+++ b/etmain/locale/mod/nl.po
@@ -1071,7 +1071,7 @@ msgid "Yes"
 msgstr "Ja"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Landvlaggen toestaan op deze server?"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2128,7 +2128,7 @@ msgid "Always Run:"
 msgstr "Altijd Rennen:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Wissel lopen/rennen"
 
 #: etmain/ui/options_customise_game.menu:42
