--- a/etmain/locale/mod/ru.po
+++ b/etmain/locale/mod/ru.po
@@ -1069,7 +1069,7 @@ msgid "Yes"
 msgstr "да"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Включить флаги стран на сервере"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2126,7 +2126,7 @@ msgid "Always Run:"
 msgstr "Всегда бежать:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Переключение бега/ходьбы"
 
 #: etmain/ui/options_customise_game.menu:42
