--- a/etmain/locale/mod/bg.po
+++ b/etmain/locale/mod/bg.po
@@ -1069,7 +1069,7 @@ msgid "Yes"
 msgstr "Да"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Позволява да се показват флагове за произхода на играчите в сървъра"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2126,7 +2126,7 @@ msgid "Always Run:"
 msgstr "Винаги бягане:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Превключване между състояния на ходене или бягане"
 
 #: etmain/ui/options_customise_game.menu:42
