--- a/etmain/locale/mod/el.po
+++ b/etmain/locale/mod/el.po
@@ -1070,7 +1070,7 @@ msgid "Yes"
 msgstr "Ναί"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Ενεργοποίηση Χώρα σημαίες στο διακομιστή"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2127,7 +2127,7 @@ msgid "Always Run:"
 msgstr "Πάντα Τρέξιμο:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Toogle βόλτα / Τρέξιμο"
 
 #: etmain/ui/options_customise_game.menu:42
