--- a/etmain/locale/mod/fi.po
+++ b/etmain/locale/mod/fi.po
@@ -1073,7 +1073,7 @@ msgid "Yes"
 msgstr "Kyllä"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Ota maiden liput käyttöön palvelimella"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2130,7 +2130,7 @@ msgid "Always Run:"
 msgstr "Juokse Aina:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Kytke kävely/juoksu"
 
 #: etmain/ui/options_customise_game.menu:42
