--- a/etmain/locale/mod/fr.po
+++ b/etmain/locale/mod/fr.po
@@ -1071,7 +1071,7 @@ msgid "Yes"
 msgstr "Oui"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Active les drapeaux des pays sur le serveur"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2128,7 +2128,7 @@ msgid "Always Run:"
 msgstr "Toujours courir:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Basculer marcher/courir"
 
 #: etmain/ui/options_customise_game.menu:42
