--- a/etmain/locale/mod/hu.po
+++ b/etmain/locale/mod/hu.po
@@ -1068,7 +1068,7 @@ msgid "Yes"
 msgstr "Igen"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Országzászlók engedélyezése a szerveren"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2125,7 +2125,7 @@ msgid "Always Run:"
 msgstr "Játékos mindig fut:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Annak beállítása, hogy a játékos alapból fusson vagy sétáljon"
 
 #: etmain/ui/options_customise_game.menu:42
