--- a/etmain/locale/mod/it.po
+++ b/etmain/locale/mod/it.po
@@ -1072,7 +1072,7 @@ msgid "Yes"
 msgstr "Si"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Abilita Bandiere Nazionali sul server"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2129,7 +2129,7 @@ msgid "Always Run:"
 msgstr "Corri Sempre:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Scambia camminata/corsa"
 
 #: etmain/ui/options_customise_game.menu:42
