--- a/etmain/locale/mod/ko.po
+++ b/etmain/locale/mod/ko.po
@@ -1068,7 +1068,7 @@ msgid "Yes"
 msgstr ""
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr ""
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2121,7 +2121,7 @@ msgid "Always Run:"
 msgstr ""
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr ""
 
 #: etmain/ui/options_customise_game.menu:42
