--- a/etmain/locale/mod/pl.po
+++ b/etmain/locale/mod/pl.po
@@ -1072,7 +1072,7 @@ msgid "Yes"
 msgstr "Tak"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Włącza Flagi Państw na serwerze"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2129,7 +2129,7 @@ msgid "Always Run:"
 msgstr "Zawsze Biegnij:"
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr "Ustawia chodznie/bieg"
 
 #: etmain/ui/options_customise_game.menu:42
