--- a/etmain/locale/mod/pt.po
+++ b/etmain/locale/mod/pt.po
@@ -1070,7 +1070,7 @@ msgid "Yes"
 msgstr "Sim"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable Country Flags on the server"
+msgid "Enable country Flags on the server"
 msgstr "Permite Bandeiras de Países no servidor"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
@@ -2127,7 +2127,7 @@ msgid "Always Run:"
 msgstr ""
 
 #: etmain/ui/options_customise_game.menu:41
-msgid "Toogle walk/run"
+msgid "Toggle walk/run"
 msgstr ""
 
 #: etmain/ui/options_customise_game.menu:42
