misc: fixed small leftover after 95860e07b63a7c6fa218cd6c544c7e74bfafce56 (refs #1121)

--- a/etmain/locale/mod/fi.po
+++ b/etmain/locale/mod/fi.po
@@ -1073,7 +1073,7 @@ msgid "Yes"
 msgstr "Kyllä"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Ota maiden liput käyttöön palvelimella"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
