--- a/etmain/locale/mod/nl.po
+++ b/etmain/locale/mod/nl.po
@@ -1071,7 +1071,7 @@ msgid "Yes"
 msgstr "Ja"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Landvlaggen toestaan op deze server?"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
