--- a/etmain/locale/mod/sr.po
+++ b/etmain/locale/mod/sr.po
@@ -1068,7 +1068,7 @@ msgid "Yes"
 msgstr "Да"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Омогућите заставе држава на серверу"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
