--- a/etmain/locale/mod/bg.po
+++ b/etmain/locale/mod/bg.po
@@ -1069,7 +1069,7 @@ msgid "Yes"
 msgstr "Да"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Позволява да се показват флагове за произхода на играчите в сървъра"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
