--- a/etmain/locale/mod/cs.po
+++ b/etmain/locale/mod/cs.po
@@ -1070,7 +1070,7 @@ msgid "Yes"
 msgstr "Ano"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Povoluje zobrazení vlajek států"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
