--- a/etmain/locale/mod/de.po
+++ b/etmain/locale/mod/de.po
@@ -1073,7 +1073,7 @@ msgid "Yes"
 msgstr "JA"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Aktiviere Länder Flaggen auf dem Server"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
