--- a/etmain/locale/mod/es.po
+++ b/etmain/locale/mod/es.po
@@ -1068,7 +1068,7 @@ msgid "Yes"
 msgstr "Si"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Activa las Banderas de los Países en el Servidor"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
