--- a/etmain/locale/mod/it.po
+++ b/etmain/locale/mod/it.po
@@ -1072,7 +1072,7 @@ msgid "Yes"
 msgstr "Si"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Abilita Bandiere Nazionali sul server"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
