--- a/etmain/locale/mod/pl.po
+++ b/etmain/locale/mod/pl.po
@@ -1072,7 +1072,7 @@ msgid "Yes"
 msgstr "Tak"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Włącza Flagi Państw na serwerze"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
