--- a/etmain/locale/mod/ru.po
+++ b/etmain/locale/mod/ru.po
@@ -1069,7 +1069,7 @@ msgid "Yes"
 msgstr "да"
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr "Включить флаги стран на сервере"
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
