--- a/etmain/locale/mod/sv.po
+++ b/etmain/locale/mod/sv.po
@@ -1069,7 +1069,7 @@ msgid "Yes"
 msgstr ""
 
 #: etmain/ui/hostgame_extended.menu:32
-msgid "Enable country Flags on the server"
+msgid "Enable country flags on the server"
 msgstr ""
 
 #: etmain/ui/hostgame_extended.menu:36 etmain/ui/hostgame.menu:195
