--- a/docs/linux/man/man6/etlded.6
+++ b/docs/linux/man/man6/etlded.6
@@ -30,7 +30,7 @@ etl - The client and listen server of ET: Legacy
 
 .SH BUGS
 
-To report a bug, please visit http://dev.etlegacy.com/projects/etlegacy/issues/
+To report a bug, please visit https://github.com/etlegacy/etlegacy/issues
 
 .SH AUTHORS
 
