--- a/docs/linux/man/man6/etlded.6
+++ b/docs/linux/man/man6/etlded.6
@@ -9,7 +9,7 @@ etlded \- ET: Legacy dedicated server
 .br
 
 .SH DESCRIPTION
-\fBetlded\fP (ET: Legacy) is an open source game based on the code of Wolfenstein: Enemy Territory which was released under the GPLv3 license. The main goal of this project is to fix bugs, remove old dependencies and make it playable on all major operating systems while still remaining compatible with the ET 2.60b version and as many of its mods as possible. Let's keep ET alive!
+\fBetlded\fP (ET: Legacy) is an open source project based on the code of Wolfenstein: Enemy Territory, which was released in 2010 under the terms of GPLv3.
 
 .SH OPTIONS
 
@@ -18,11 +18,6 @@ Prints version info
 
 .IP \fB\+\fP
 Passes commands into the game. Syntax is +<command> <param> <value>. F.e. '+set g_warmup 30' or '+exec etl_server.cfg'. Use space between more than one command.
-
-.SH NOTES
-
-We do appreciate any contribution to the project such as patches, suggestions or comments.
-For any issues visit http://www.etlegacy.com or mail to mail@etlegacy.com
 
 .SH "SEE ALSO"
 
@@ -34,7 +29,7 @@ To report a bug, please visit https://github.com/etlegacy/etlegacy/issues
 
 .SH AUTHORS
 
-ET: Legacy Team
+ET: Legacy Team - https://www.etlegacy.com
 
 .SH COPYRIGHT
 
